Tulokset: energiamoodin kulkijat kuvateksti, n = 22 kpl

--- a/Tutkielma/content/tulokset.tex
+++ b/Tutkielma/content/tulokset.tex
@@ -130,7 +130,7 @@ Numeeriseen laskentaan käytettiin Helsingin yliopiston Tietojenkäsittelytietee
 \begin{figure}[htpb]
     \centering
     \includegraphics[width=1.0\linewidth]{figures/A_modalbin_cc_fast_1.pdf}
-    \caption{Kuvan~\ref{fig:A_final_histo3_fast} testikuvan b histogrammin energiamoodin kulkijoiden ($n = $ kpl) löytämät keskipisteet.
+    \caption{Kuvan~\ref{fig:A_final_histo3_fast} testikuvan b histogrammin energiamoodin kulkijoiden ($n = 22$ kpl) löytämät keskipisteet, saman kulkijan pisteet samalla värillä.
         Keskipisteiden sijaintiin lisätty $U(-2,2)$-tärinää päällekkäisten merkkien näkemiseksi.
         Toisin kuin kuvassa~\ref{fig:A_final_histo3_fast} näkyvässä parhaassa ratkaisussa, loppuenergiamoodin kulkijat eivät näytä löytävän neljättä kiekkoa ($x = 44, y = 44, r = 8$).
         \label{fig:A_modalbin_cc_fast_1}
