lisää Geman Geman 1984 viite

--- a/Tutkielma/bibkandi.bib
+++ b/Tutkielma/bibkandi.bib
@@ -217,3 +217,14 @@
     author = {Ilia Zintchenko and Ethan Brown and Matthias Troyer},
     url = {http://www.scottaaronson.com/troyer.pdf}
 }
+
+@article{gemangeman84,
+    year = {1984},
+    title = {Stochastic Relaxation, Gibbs Distribution, and the Bayesian Restoration of Images},
+    author = {Stuart Geman and Donald Geman},
+    journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+    number = {6},
+    pages ={721--741},
+    publisher = {IEEE}
+}
+
