--- a/Tutkielma/content/algoritmi.tex
+++ b/Tutkielma/content/algoritmi.tex
@@ -462,7 +462,7 @@ eli
     \lim_{t \to 0} \left(\lim_{k \to \infty}\Pr\left\{\vect{X}(k) \in S_\text{opt}\right\} \right) = 1.
 \end{equation}
 
-Lisäksi voidaan osoittaa~\parencite[Luku 3.2]{laarhoven} että kun Markov-ketjujen pituus kullakin $t$ on yksi  tai yleisemmin äärellinen (epähomogeeni algoritmi),
+Lisäksi voidaan osoittaa~\parencites[Luku 3.2]{laarhoven}[]{gemangeman84} että kun Markov-ketjujen pituus kullakin $t$ on yksi  tai yleisemmin äärellinen (epähomogeeni algoritmi),
 algoritmi silti konvergoi kohti optimia kunhan $t \to 0$ riittävän hitaasti,
 missä 'riittävän hitaasti' tarkoittaa ehtoa muotoa
 \begin{equation}
