--- a/Tutkielma/kandidaatintutkielma.tex
+++ b/Tutkielma/kandidaatintutkielma.tex
@@ -38,7 +38,9 @@
     \input{./title}
 
     % sisallys
-    \tableofcontents
+    {\small
+        \tableofcontents
+    }
 
     \include{./content/johdanto}
     \include{./content/algoritmi}
