alaluku johtopäätökset -> Yhteenveto ja pohdinta (vältä toistoa pääluvun otsikon kanssa)

--- a/Tutkielma/content/pohdinta.tex
+++ b/Tutkielma/content/pohdinta.tex
@@ -61,7 +61,7 @@ Kiekkojen lukumäärän kasvaessa yhdellä ongelman optimoitavien parametrien av
 Tunnetusti optimointiongelmissa tämä avaruuden koon kasvu vaikeuttaa optimoiniongelmia, ja tästä syystä myös kiekkojen määrä oletettiin tunnetuksi vakioksi.
 Näin ollen vielä tutkielman pienillä kiekkomäärillä $k = 1, \dots, 5$ ulottuvuuksien kasvu ei näyttänyt olevan jäähdytysalgoritmille suuri ongelma.
 
-\section{Johtopäätökset ja pohdinta}
+\section{Yhteenveto ja pohdinta}
 \label{sec:johtopaatokset}
 
 \subsection{Algoritmi}
